# xpc-connection-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: main.yml
examples/client/: Cargo.toml
examples/client/src/: main.rs
examples/echo-server/: Cargo.toml  Makefile  com.example.echo.plist  server.c
examples/echo-server/src/: main.rs
src/: lib.rs  message.rs
tests/: integration_test.rs
xpc-connection/: Cargo.toml
xpc-connection-sys/: Cargo.toml  build.rs  wrapper.h
xpc-connection-sys/src/: lib.rs
xpc-connection/src/: dlsym.rs  lib.rs  message.rs
xpc-connection/tests/: integration_test.rs  message_round_trip.rs
