[package]
authors = ["Dylan Frankland <github@frankland.io>"]
name = "xpc-connection"
version = "0.2.3"
edition = "2018"
license = "MIT"
description = "XPC connection bindings for Rust"
homepage = "https://github.com/dfrankland/xpc-connection-rs"
repository = "https://github.com/dfrankland/xpc-connection-rs"
keywords = ["xpc", "mac", "macOS"]
categories = ["os", "api-bindings", "concurrency", "encoding"]

[dependencies]
block = "0.1.6"
futures = "0.3.4"
xpc-connection-sys = { path="../xpc-connection-sys", version="0.1.0" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
